# Omega3D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
3Dexamples/: colliding_vortex_rings_nv.json  driven_cavity.json  flow_over_sphere.json  interlocking_vortex_rings_v.json  leapfrog_vortex_rings_nv.json  single_vortex_ring_nv.json  single_vortex_ring_v.json
examples/: colliding_vortex_rings_nv.json  driven_cavity.json  flow_over_cube.json  flow_over_sphere.json  interlocking_vortex_rings_v.json  leapfrog_vortex_rings_nv.json  single_vortex_ring_nv.json  single_vortex_ring_v.json
examples3D/: colliding_vortex_rings_nv.json  flow_over_cube.json  leapfrog_vortex_rings_nv.json  single_vortex_ring_v.json
lib/igl/: connect_boundary_to_infinity.cpp  sortrows.cpp  unique_rows.cpp
lib/imgui/: ImguiWindowsFileIO.cpp
src/: BEM.h  BEMHelper.h  Body.cpp  Body.h  BoundaryFeature.cpp  BoundaryFeature.h  Coeffcients.h  Coefficients.h  Collection.h  CollectionHelper.cpp  CollectionHelper.h  ComputeState.h  Convection.h  Core.h  CoreFunc.h  CoreSpread.h  Cube.h  Diffusion.h  ElementBase.h  ElementPacket.h  ExecEnv.h  Feature.h  FeatureDraw.cpp  FeatureDraw.h  FlowFeature.cpp  FlowFeature.h  GeomHelper.cpp  GeomHelper.h  GlComputeState.h  GlState.h  HOVolumes.h  Hybrid.h  Icosahedron.h  IglDecimate.cpp  IglDecimate.h  IglMergeDups.cpp  IglMergeDups.h  IglReadGeom.cpp  IglReadGeom.h  IglRefine.cpp  (+42 more)
src/igl/: parallel_for.h
src/imgui/: ImguiWindowsFileIO.cpp
src/shaders/: elempack.vert  flattriangle.frag  flattriangle.vert  particle.frag  particle.vert  point.frag  point.vert  ptptvelgrad.comp  ptptvelgradexp.comp  ptptvelgradrm.comp  ptptvelgradv2.comp  ptptvelgradwl.comp  zeropointvels.comp
